--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,11 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 asyncpg==0.31.0
+bcrypt==5.0.0
+cffi==2.0.0
 click==8.3.1
+cryptography==46.0.5
+ecdsa==0.19.1
 fastapi==0.128.0
 greenlet==3.3.1
 h11==0.16.0
@@ -11,10 +15,16 @@ httptools==0.7.1
 idna==3.11
 Mako==1.3.10
 MarkupSafe==3.0.3
+pyasn1==0.6.2
+pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
+python-jose==3.5.0
+python-multipart==0.0.22
 PyYAML==6.0.3
+rsa==4.9.1
+six==1.17.0
 SQLAlchemy==2.0.46
 starlette==0.50.0
 typing-inspection==0.4.2
