--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,7 +2,26 @@ server {
     listen 80;
     root /usr/share/nginx/html;
 
+    # Gzip compression
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml image/svg+xml;
+    gzip_min_length 256;
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # SPA fallback — index.html ne doit pas être caché
     location / {
-    try_files $uri /index.html;
+        try_files $uri /index.html;
+        add_header Cache-Control "no-cache";
+    }
+
+    # Assets Vite (JS, CSS, images avec hash) — cache longue durée
+    location /assets/ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 }
