--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   backend:
     build: ./backend
+    restart: unless-stopped
     ports:
       - "8000:8000"
     env_file:
@@ -12,13 +13,14 @@ services:
         condition: service_healthy
   frontend:
     build: ./frontend
+    restart: unless-stopped
     ports:
       - "80:80"
   db:
     image: postgres:16
+    restart: unless-stopped
     env_file:
       - .env
-
     ports:
       - "5433:5432"
     volumes:
