--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,4 @@ COPY . .
 RUN adduser --disabled-password --no-create-home appuser
 USER appuser
 EXPOSE 8000
-CMD ["sh", "-c", "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+CMD ["sh", "-c", "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 --proxy-headers --forwarded-allow-ips='*'"]
