--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,3 +34,7 @@ uvicorn==0.40.0
 uvloop==0.22.1
 watchfiles==1.1.1
 websockets==16.0
+anthropic>=0.40.0
+openai>=1.50.0
+httpx>=0.27.0
+google-genai>=1.0.0
