--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@xyflow/react": "^12.10.0",
     "axios": "^1.13.4",
     "dagre": "^0.8.5",
+    "elkjs": "^0.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
