--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,6 +83,7 @@ jobs:
             sudo cp nginx/humantree.conf /etc/nginx/sites-available/humantree
             sudo nginx -t && sudo systemctl reload nginx
             docker compose up -d --build
+            docker compose exec -T backend alembic upgrade head
             for i in {1..10}; do
               echo "Checking if the application is up... (attempt $i)"
               if curl -X GET http://127.0.0.1:8000/health -f && curl -X GET http://127.0.0.1:3000/ -f; then
